tests/NormalTests/paczka2/big_fuzzy/25341019.err
Error in line 1: VifI S594 18,45
Error in line 3: VifI S594 28,3
Error in line 7: 5DSb7 S118 98,2
Error in line 26: S686 S757 6,9
Error in line 27: S686 S686 18,0
Error in line 32: S686 S757 70,8
Error in line 28: TOzS6yy6 S686 13,2
Error in line 37: Ii99dv S118 238,2
Error in line 46: VifI S118 0,6
Error in line 48: S686 S757 73,8
Error in line 50: VifI S757 98,6
Error in line 79: vASh3QrEmC S757 90,3
Error in line 84: 5DSb7 S686 59,8
Error in line 85: VifI S594 48,6
Error in line 83: vASh3QrEmC S757 63,0
Error in line 87: 5DSb7 S594 37,3
Error in line 78: TOzS6yy6 S686 9,4
Error in line 90: S686 S594 13,8
Error in line 98: Ii99dv S594 59,4
Error in line 112: Ii99dv S594 5,4
Error in line 114: VifI S118 14,2
Error in line 133: Ii99dv S757 14,4
Error in line 102: TOzS6yy6 S757 157,3
Error in line 138: 5DSb7 S686 12,3
Error in line 141: 5DSb7 S118 87,6
Error in line 140: TOzS6yy6 S594 48,6
Error in line 136: S686 S757 18,0
Error in line 152: TOzS6yy6 S118 20,5
Error in line 159: TOzS6yy6 S757 35,7
Error in line 169: FFTHP S757 37,3
Error in line 170: vASh3QrEmC S118 29,7
Error in line 182: Ii99dv S118 182,74
Error in line 198: Ii99dv S118 61,1
Error in line 209: Ii99dv S757 1,5
Error in line 212: Ii99dv S594 59,8
Error in line 206: VifI S757 18,2
Error in line 228: vASh3QrEmC S686 41,3
Error in line 240: TOzS6yy6 S118 91,9
Error in line 243: vASh3QrEmC S757 40,8
